<?xml version="1.0"?>
<package format="2">
  <name>kuka_ros_node</name>
  <version>0.1.0</version>
  <description>ROS1 node for KUKA Med LBR 7</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
</package>